DBC22-1662: Fix spacing in advisory/bulletins

--- a/src/frontend/src/pages/AdvisoriesListPage.scss
+++ b/src/frontend/src/pages/AdvisoriesListPage.scss
@@ -61,7 +61,7 @@
         }
 
         .friendly-time, .formatted-date {
-          margin-left: 1ch;
+          margin-left: 0.5ch;
         }
       }
 
