--- a/src/frontend/src/pages/AdvisoryDetailsPage.scss
+++ b/src/frontend/src/pages/AdvisoryDetailsPage.scss
@@ -31,7 +31,7 @@
     .timestamp-container {
       display: flex;
       .friendly-time, .formatted-date {
-        margin-left: 1ch;
+        margin-left: 0.5h;
       }
     }
   }
