--- a/src/frontend/src/pages/BulletinsListPage.scss
+++ b/src/frontend/src/pages/BulletinsListPage.scss
@@ -58,7 +58,7 @@
         }
 
         .friendly-time, .formatted-date {
-          margin-left: 1ch;
+          margin-left: 0.5ch;
         }
       }
 
